--- a/biblioteca/src/main/resources/application.properties
+++ b/biblioteca/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/biblioteca-api?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=senhadomysql
+spring.jpa.hibernate.ddl-auto=update
