--- a/biblioteca/src/main/resources/application.properties
+++ b/biblioteca/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost/biblioteca-api?createDatabaseIfNotE
 spring.datasource.username=root
 spring.datasource.password=senhadomysql
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
